; ModuleID = '/home/carl/AnghaBench/HandBrake/gtk/src/extr_values.c_ghb_int_value.c'
source_filename = "/home/carl/AnghaBench/HandBrake/gtk/src/extr_values.c_ghb_int_value.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ghb_int_value.gval = internal global i32* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @ghb_int_value(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32*, i32** @ghb_int_value.gval, align 8
  %4 = icmp eq i32* %3, null
  br i1 %4, label %5, label %8

5:                                                ; preds = %1
  %6 = load i32, i32* %2, align 4
  %7 = call i32* @json_integer(i32 %6)
  store i32* %7, i32** @ghb_int_value.gval, align 8
  br label %12

8:                                                ; preds = %1
  %9 = load i32*, i32** @ghb_int_value.gval, align 8
  %10 = load i32, i32* %2, align 4
  %11 = call i32 @json_integer_set(i32* %9, i32 %10)
  br label %12

12:                                               ; preds = %8, %5
  %13 = load i32*, i32** @ghb_int_value.gval, align 8
  ret i32* %13
}

declare dso_local i32* @json_integer(i32) #1

declare dso_local i32 @json_integer_set(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
